changing the classes of headers by BEM

--- a/src/index.html
+++ b/src/index.html
@@ -50,8 +50,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 offset-md-0 col-lg-10 offset-lg-1">
-                    <h1 class="title title_fz60">КОМПАНИЯ UBER PARTNERS!</h1>
-                    <h2 class="title title_fz36 promo__subheader">ПРИГЛАШАЕМ ВОДИТЕЛЕЙ! НА СВОЕМ АВТО!</h2>
+                    <h1 class="title title_fz60 title_mb0">КОМПАНИЯ UBER PARTNERS!</h1>
+                    <h2 class="title title_fz36 title_mt20 title_mb0">ПРИГЛАШАЕМ ВОДИТЕЛЕЙ! НА СВОЕМ АВТО!</h2>
                     <div class="promo__descr">
                         Компания UBER  динамически развивающаяся. Компания на рынке занимает лидирующее место средитаксомоторных компаний, Компания абсолютно прозрачная вы можете контролировать все процессы у себя в личном кабинете. Бонуcная система.Помимо выполненной работы по заказам, компания начисляет бонусы запиковое время. <br><br>
                         
@@ -66,7 +66,7 @@
     <section class="causes">
         <div class="container">
             <div class="label">преимущества</div>
-            <h2 class=" causes__header title title_black">8 причин начать работать с нами</h2>
+            <h2 class="title title_black title_mt32 title_mb0">8 причин начать работать с нами</h2>
             <div class="row">
                 <div class="col-md-6">
                     <div class="causes__item">
@@ -192,7 +192,7 @@
     <section class="mobile">
         <div class="container">
             <div class="label">Возможности</div>
-            <div class="mobile__title title title_black">мобильное приложение убер</div>
+            <div class="title title_black title_mt32 title_mb0">мобильное приложение убер</div>
             <div class="subtitle">
                 Сделайте заказ, совершите поездку и оплатите ее стоимость, используя свой мобильный телефон
             </div>
@@ -241,7 +241,7 @@
         <div class="container">
             <div class="choice__black"></div>
             <div class="label label_white">Возможности</div>
-            <h2 class="title choice__title">Выбор - отличная штука!</h2>
+            <h2 class="choice__title title title_mt27 title_mb0">Выбор - отличная штука!</h2>
             <div class="subtitle subtitle_white">Закажите автомобиль, который подходит вам по стилю и бюджету</div>
             <img src="img/car.png" alt="car" class="choice__img">
             <div class="choice__text">Машины на каждый день. <br>
@@ -253,7 +253,7 @@
     <section class="require" id="require">
         <div class="container">
             <div class="label">Возможности</div>
-            <h2 class="title title_black require__header">условия и требования</h2>
+            <h2 class="title title_black title_mt27 title_mb0">условия и требования</h2>
             <div class="row">
                 <div class="col-md-6">
                     <div class="require__block">
@@ -354,7 +354,7 @@
     <section class="world">
         <div class="container">
             <div class="label label_white label_w76">города</div>
-            <div class="title world__title">По всему миру</div>
+            <div class="title title_mt27 title_mb0">По всему миру</div>
             <div class="subtitle subtitle_white">Мы в вашем городе и по всему миру</div>
             <a href="#" class="world__link">посмотреть все города</a>
         </div>
